# Simple3DEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.h  README.md  Utils.h  main.cpp
playground/: Camera.cpp  Camera.h  GeometryHolder.cpp  GeometryHolder.h  OrthographicCamera.cpp  OrthographicCamera.h  Playground.cpp  Playground.h  SimpleCube.cpp  SimpleCube.h
render/: Canvas.cpp  Canvas.h  Renderer.cpp  Renderer.h  Vector.cpp  Vector.h  Vector3F.cpp  Vector3F.h
